--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 
   <dependencies>
 
+    <!-- Concrete classes proxying -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.1</version>
+    </dependency>
+
   </dependencies>
 
 </project>
