--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>ar.com.kfgodel</groupId>
-    <artifactId>root-pom</artifactId>
+    <artifactId>java-pom</artifactId>
     <version>0.1-SNAPSHOT</version>
   </parent>
 
@@ -30,17 +31,6 @@
     <url>https://github.com/kfgodel/java-proximity</url>
   </scm>
 
-
-  <properties>
-  </properties>
-
-
-  <build>
-    <plugins>
-
-    </plugins>
-  </build>
-
   <dependencies>
 
     <!-- Concrete classes proxying -->
@@ -48,6 +38,12 @@
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
       <version>3.1</version>
+    </dependency>
+
+    <!-- Rspec like testing -->
+    <dependency>
+      <groupId>ar.com.dgarcia</groupId>
+      <artifactId>java-spec</artifactId>
     </dependency>
 
   </dependencies>
