Remove branch specifier

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
   <properties>
     <!-- Sonar properties to prevent unintentional id changes (Reference: https://docs.sonarqube.org/latest/analysis/analysis-parameters/) -->
-    <sonar.projectKey>ar.com.kfgodel:java-proximity:master</sonar.projectKey>
+    <sonar.projectKey>ar.com.kfgodel:java-proximity</sonar.projectKey>
   </properties>
 
   <dependencies>
